--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,20 @@
-name: RT-Extension-SideBySide-CustomView
-version: 0.02
-abstract: SideBySide Ticket View
-author: Torsten Brumm <tbrumm@mac.com>
-license: GPL version 2
+---
+abstract: 'SideBySide Ticket View for RT'
+author:
+  - 'Torsten Brumm <tbrumm@mac.com>'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
+generated_by: 'Module::Install version 0.92'
+license: 'GPL version 2'
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: RT-Extension-SideBySideView-CustomView
 no_index:
   directory:
     - html
     - inc
-generated_by: Module::Install version 0.36
+version: 0.02
