--- a/.github/workflows/rt-extension-test.yml
+++ b/.github/workflows/rt-extension-test.yml
@@ -1,4 +1,3 @@
----
 name: RT extension test
 
 on:
@@ -18,7 +17,7 @@ jobs:
           - '4.2'
           - '4.4'
 
-    container: netsandbox/request-tracker:${{ matrix.rt }}
+    container: ghcr.io/netsandbox/request-tracker:${{ matrix.rt }}
 
     steps:
       - name: Checkout code
